<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/alertLay"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/txt_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/tap_to_open"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/btn_wapp"
                android:layout_width="@dimen/_190sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/wapp" />

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_37sdp"
                    android:text="@string/wapp"
                    android:textColor="@color/header_text_color"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_wapp_bus"
                android:layout_width="@dimen/_190sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/wa_business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_37sdp"
                    android:text="@string/whatsapp_business"
                    android:textColor="@color/header_text_color"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_wapp_gb"
                android:layout_width="@dimen/_190sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/home_btn"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/gb_icon_grn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_37sdp"
                    android:text="@string/whatsapp_gb"
                    android:textColor="@color/header_text_color"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
