<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/btn_icon">

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10.0dip"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="1.0dip"
            app:srcCompat="@drawable/left"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/typeSS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="Status Saver"
            android:textColor="@color/white_normal"
            android:textSize="18sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerViewImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actionLayy"
        android:layout_below="@+id/topBar"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/actionLayy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/actionLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_10sdp"
            android:visibility="gone"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_4sdp">

                <RelativeLayout
                    android:layout_width="@dimen/_33sdp"
                    android:layout_height="@dimen/_33sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_round_pre"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/selectAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#FFFFFF"
                        android:textColor="#9C27B0"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />
                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="2dp"
                    android:text="@string/select_all"
                    android:textColor="@color/btn_text"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/downloadIV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_4sdp">

                <ImageView
                    android:layout_width="@dimen/_33sdp"
                    android:layout_height="@dimen/_33sdp"
                    android:background="@drawable/ic_round_pre"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_save"
                    app:tint="@color/pre_icon_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/save"
                    android:textColor="@color/btn_text"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deleteIV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_4sdp">

                <ImageView
                    android:layout_width="@dimen/_33sdp"
                    android:layout_height="@dimen/_33sdp"
                    android:background="@drawable/ic_round_pre"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/pre_icon_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/delete"
                    android:textColor="@color/btn_text"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" />
    </LinearLayout>

    <include layout="@layout/loader_lay" />

    <include layout="@layout/empty_lay" />
</RelativeLayout>